# lumen-backend

./: .env  .gitignore  Cargo.toml  cert.pem  key.pem
migrations/2023-07-13-192502_create_user/: up.sql
migrations/2023-07-24-220915_create_posts/: up.sql
migrations/2023-07-27-180912_create_threads/: up.sql
src/: lib.rs  schema.rs
src/endpoints/: api.rs  api_helper.rs  mod.rs  news_api.rs
src/models/: mod.rs  post.rs  thread.rs  user.rs
src/queries/: insert_post.rs  insert_thread.rs  insert_user.rs  mod.rs  post_query.rs  select_post.rs  select_posts.rs  select_threads.rs  select_user.rs  select_users.rs  thread_query.rs  user_query.rs
