[package]
name = "lumen-backend"
version = "0.1.0"
edition = "2021"
authors = ["Timo Caktu"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
argon2 = "0.5.0"
blake3 = "1.3.3"
env_logger = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
