[package]
name = "lumen-backend"
version = "0.1.0"
edition = "2021"
authors = ["Timo Caktu"]
license = "MIT OR Apache-2.0"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.7.0", features = ["openssl"]}
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-files = "0.6.2"
argon2 = "0.5.0"
blake3 = "1.3.3"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.11.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.102"
actix-cors = "0.7.0"
openssl = {version = "0.10.55", features = ["v110"]}
log = "0.4.19"
actix-web-httpauth = "0.8.1"
mime = "0.3.17"
chrono = "0.4.31"
reqwest = { version = "0.12.1", features = ["json"] }
